tests/dataset/job/compiler/c/q20.error
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c: In function ‘test_Q20_finds_complete_cast_Iron_Man_movie’:
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:335:69: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  335 |   if (test_Q20_finds_complete_cast_Iron_Man_movie_result.len != tmp1.len) {
      |                                                                     ^
      |                                                                     ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:341:15: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  341 |           tmp1.data[i3]) {
      |               ^
      |               ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:397:7: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  397 |       int_create(complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |       ^~~~~~~~~~
      |       list_int_create
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:397:31: error: ‘(complete_cast_t *)&complete_cast’ is a pointer; did you mean to use ‘->’?
  397 |       int_create(complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                               ^
      |                               ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:397:52: error: ‘(comp_cast_type_t *)&comp_cast_type’ is a pointer; did you mean to use ‘->’?
  397 |       int_create(complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                                                    ^
      |                                                    ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:397:73: error: ‘(comp_cast_type_t *)&comp_cast_type’ is a pointer; did you mean to use ‘->’?
  397 |       int_create(complete_cast.len * comp_cast_type.len * comp_cast_type.len *
      |                                                                         ^
      |                                                                         ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:398:27: error: ‘(cast_info_t *)&cast_info’ is a pointer; did you mean to use ‘->’?
  398 |                  cast_info.len * char_name.len * name.len * movie_keyword.len *
      |                           ^
      |                           ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:398:43: error: ‘(char_name_t *)&char_name’ is a pointer; did you mean to use ‘->’?
  398 |                  cast_info.len * char_name.len * name.len * movie_keyword.len *
      |                                           ^
      |                                           ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:398:54: error: ‘(name_t *)&name’ is a pointer; did you mean to use ‘->’?
  398 |                  cast_info.len * char_name.len * name.len * movie_keyword.len *
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:398:74: error: ‘(movie_keyword_t *)&movie_keyword’ is a pointer; did you mean to use ‘->’?
  398 |                  cast_info.len * char_name.len * name.len * movie_keyword.len *
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:399:25: error: ‘(keyword_t *)&keyword’ is a pointer; did you mean to use ‘->’?
  399 |                  keyword.len * title.len * kind_type.len);
      |                         ^
      |                         ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:399:37: error: ‘(title_t *)&title’ is a pointer; did you mean to use ‘->’?
  399 |                  keyword.len * title.len * kind_type.len);
      |                                     ^
      |                                     ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:399:53: error: ‘(kind_type_t *)&kind_type’ is a pointer; did you mean to use ‘->’?
  399 |                  keyword.len * title.len * kind_type.len);
      |                                                     ^
      |                                                     ->
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:451:57: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  451 |                                     contains_string(cct2.kind, "complete") &&
      |                                                     ~~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:452:59: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  452 |                                     ((!contains_string(chn.name,
      |                                                        ~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:454:57: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  454 |                                     (contains_string(chn.name, "Tony Stark") ||
      |                                                      ~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:455:57: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  455 |                                      contains_string(chn.name, "Iron Man")) &&
      |                                                      ~~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:455:77: warning: passing argument 2 of ‘contains_list_string’ makes pointer from integer without a cast [-Wint-conversion]
  450 |                                 (strcmp(cct1.kind, "cast") == 0) &&
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~          
  451 |                                     contains_string(cct2.kind, "complete") &&
      |                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  452 |                                     ((!contains_string(chn.name,
      |                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~             
  453 |                                                        "Sherlock"))) &&
      |                                                        ~~~~~~~~~~~~~~~~      
  454 |                                     (contains_string(chn.name, "Tony Stark") ||
      |                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  455 |                                      contains_string(chn.name, "Iron Man")) &&
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                             |
      |                                                                             int
  456 |                                     k.keyword) &&
      |                                     ~~~~~~~~~                                
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:71:54: note: expected ‘char *’ but argument is of type ‘int’
   71 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:460:27: error: request for member ‘data’ in something not a structure or union
  460 |                       tmp4.data[tmp5] = t.title;
      |                           ^
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:472:7: error: request for member ‘len’ in something not a structure or union
  472 |   tmp4.len = tmp5;
      |       ^
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:473:7: error: conflicting types for ‘matches’; have ‘int’
  473 |   int matches = tmp4;
      |       ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:387:15: note: previous definition of ‘matches’ with type ‘list_string’
  387 |   list_string matches = list_string_create(8);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:485:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  485 |     _json_string(it.complete_downey_ironman_movie);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:82:32: note: expected ‘char *’ but argument is of type ‘const char *’
   82 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq203158356142/001/prog.c:489:56: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  489 |   test_Q20_finds_complete_cast_Iron_Man_movie_result = result;
      |                                                        ^~~~~~
